test_suite/tests/compile_error_cases/anon_lifetime.rs
#[moq::automock]
trait Trait {
    fn f(&self, arg: &'_ i32);
}

fn main() {}
